--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-5 col-sm-8">
                          <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
-                              <img src="file:///home/userii/Documents/resumeweb/images/call.jpg" height="250">
+                              <img src="images/call.jpg" height="250">
                          </div>
                     </div>
 
@@ -309,14 +309,14 @@
      </footer>
 
      <!-- SCRIPTS -->  
-     <script src="js/jquery.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/jquery.parallax.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script src="js/jquery.magnific-popup.min.js"></script>
-     <script src="js/magnific-popup-options.js"></script>
-     <script src="js/wow.min.js"></script>
-     <script src="js/custom.js"></script>
+     <script src="jquery.js"></script>
+     <script src="bootstrap.min.js"></script>
+     <script src="jquery.parallax.js"></script>
+     <script src="smoothscroll.js"></script>
+     <script src="jquery.magnific-popup.min.js"></script>
+     <script src="magnific-popup-options.js"></script>
+     <script src="wow.min.js"></script>
+     <script src="custom.js"></script>
 
 </body>
 
