--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <link rel="stylesheet" href="css/font-awesome.min.css">
 
      <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/tooplate-style.css">
+     <link rel="stylesheet" href="tooplate-style.css">
 
 </head>
 
