--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <title>SREYAS SUNANDAN</title>
-     <link rel="icon" type="image/x-icon" href="file:///home/userii/Documents/resumeweb/images/123.jpg">
+     <link rel="icon" type="image/x-icon" href="123.jpg">
 
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/animate.css">
