--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
      <title>SREYAS SUNANDAN</title>
      <link rel="icon" type="image/x-icon" href="123.jpg">
 
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/animate.css">
-     <link rel="stylesheet" href="css/magnific-popup.css">
-     <link rel="stylesheet" href="css/font-awesome.min.css">
+     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="stylesheet" href="animate.css">
+     <link rel="stylesheet" href="magnific-popup.css">
+     <link rel="stylesheet" href="font-awesome.min.css">
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-style.css">
