--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                     <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                          <!-- WORK THUMB -->
                          <div class="work-thumb">
-                            <!-- <a href="images/work-image1.jpg" class="image-popup">-->
+                           <!--  <a href="work-image1.jpg" class="image-popup">-->
                                    <div class="work-thumb-overlay">
                                         <h4 class="white-color">C/C++,HTML,CSS</h4>
                                         <h2>VSCode</h2>
                                    </div>
-                                   <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
+                                   <img src="work-image1.jpg" class="img-responsive" alt="Work 1">
                               </a>
                          </div>
                     </div>
@@ -223,7 +223,7 @@
                                         <h4 class="white-color">SQL</h4>
                                         <h2>MySQL</h2>
                                    </div>
-                                   <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
+                                   <img src="work-image2.jpg" class="img-responsive" alt="Work 2">
                               </a>
                          </div>
                     </div>
@@ -236,7 +236,7 @@
                                         <h4 class="white-color">C/C++</h4>
                                         <h2>Geany/turboc++</h2>
                                    </div>
-                                   <img src="images/work-image3.jpg" class="img-responsive" alt="Work 3">
+                                   <img src="work-image3.jpg" class="img-responsive" alt="Work 3">
                               </a>
                          </div>
                     </div>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="col-md-5 col-sm-8">
                          <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
-                              <img src="images/call.jpg" height="250">
+                              <img src="call.jpg" height="250">
                          </div>
                     </div>
 
