--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                     <div class="col-md-4 col-sm-8">
                          <div class="about-image-thumb">
-                              <img src="images/profile-image.jpg" class="wow fadeInUp img-responsive"
+                              <img src="profile-image.jpg" class="wow fadeInUp img-responsive"
                                    data-wow-delay="0.2s" alt="about image">
                               <ul class="social-icon">
                                    <li><a href="#" class="fa fa-facebook"></a></li>
