--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                    <li><a href="#" class="fa fa-facebook"></a></li>
                                    <li><a href="https://x.com/SreyasSunandan?t=UOd8kDt8sdCh_7GEUCa2AA&s=09"
                                              class="fa fa-twitter"></a></li>
-                                   <li><a href="https://www.instagram.com/srxyxs__/" class=" fa fa-instagram"></a><i class="fa fa-instagram"</i></li>
+                                   <li><a href="https://www.instagram.com/srxyxs__/" class=" fa fa-instagram"></a></li>
                                    <li><a href="https://github.com/Sreyas-sunandan" class="fa fa-github"></a></li>
                               </ul>
                          </div>
