--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                     <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                          <div class="service-thumb">
-                              <i class="fa fa-database"></i>
+                              <i class="fa fa-database" aria-hidden="true"></i>
                               <h4>SQL</h4>
                               <p>Intermediate level</p>
                          </div>
