--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                               <ul class="social-icon">
                                    <li><a href="#" class="fa fa-facebook"></a></li>
                                    <li><a href="https://x.com/SreyasSunandan?t=UOd8kDt8sdCh_7GEUCa2AA&s=09"
-                                             data-feather="twitter></a></li>
+                                        <i data-feather="twitter"></i></a></li>
                                    <li><a href="https://www.instagram.com/srxyxs__/" class=" fa fa-instagram"></a></li>
                                    <li><a href="https://github.com/Sreyas-sunandan" class="fa fa-github"></a></li>
                               </ul>
