--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                    data-wow-delay="0.2s" alt="about image">
                               <ul class="social-icon">
                                    <li><a href="#" class="fa fa-facebook"></a></li>
-                                   <li><a href="https://x.com/SreyasSunandan?t=UOd8kDt8sdCh_7GEUCa2AA&s=09"
+                                   <li><a href="https://x.com/SreyasSunandan?t=UOd8kDt8sdCh_7GEUCa2AA&s=09">
                                         <i data-feather="twitter"></i></a></li>
                                    <li><a href="https://www.instagram.com/srxyxs__/" class=" fa fa-instagram"></a></li>
                                    <li><a href="https://github.com/Sreyas-sunandan" class="fa fa-github"></a></li>
