--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="tooplate-style.css">
-
+     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body bgcolor="black">
