--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
      <script src="magnific-popup-options.js"></script>
      <script src="wow.min.js"></script>
      <script src="custom.js"></script>
-
+     <script> feather.replace() </script>
 </body>
 
 </html>
