--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                    <li><a href="https://www.instagram.com/srxyxs__/" class=" fa fa-instagram"></a></li>
                                    <li><a href="https://github.com/Sreyas-sunandan" class="fa fa-github"></a></li>
                               </ul>
-                               <a class="downloadBtn" href="sreyas resume.pdf" download="Resume.pdf">Download Resume</a>
+                               <a class="wow fadeInUp smoothScroll btn btn-default section-btn" href="sreyas resume.pdf" download="Resume.pdf">Download Resume</a>
                          </div>
                     </div>
 <center>
